frog arrows new

--- a/frogweb/froga.html
+++ b/frogweb/froga.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Frog.Web</title>
-		<link rel="stylesheet" href="css/froga.css" />
+		<link rel="stylesheet" href="css/frog.css" />
 		<script type="text/javascript" src="js/froga.js"></script>
 	</head>
 
@@ -16,7 +16,7 @@
 					<td class="frogaTD" width="10%" background="img/swamp0t.png" id="td9a"></td>
 					<td class="frogaTD" width="10%" background="img/swamp0t.png" id="td9b"></td>
 					<td class="frogaTD" width="10%" background="img/frogend0t.png" id="td9c">
-						<img class="frogaIMGWhole" src="img/frogend0t.png"  width="36" height="27" border="0" id="whole0" cellid="td9c" />
+						<img class="frogaIMGWhole" src="img/frogend0t.png" width="36" height="27" border="0" id="whole0" cellid="td9c" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/swamp0t.png" id="td9d"></td>
 					<td class="frogaTD" width="10%" background="img/frogend0t.png" id="td9e">
@@ -49,26 +49,26 @@
 					<td class="frogaTD" width="10%" background="img/water0t.png" id="td7a"></td>
 					<td class="frogaTD" width="10%" background="img/water0t.png" id="td7b"></td>
 					<td class="frogaTD" width="10%" background="img/water1t.png" id="td7c">
-						<img class="frogaIMGWood" src="img/wood0t.png"  width="36" height="27" border="0" id="woodT0" alt="td7c" cellid="td7c" />
+						<img class="frogaIMGWood" src="img/wood0t.png" width="36" height="27" border="0" id="woodT0" alt="td7c" cellid="td7c" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/water0t.png" id="td7d">
-						<img class="frogaIMGWood" src="img/wood0t.png"  width="36" height="27" border="0" id="woodT1" alt="td7d" cellid="td7d" />
+						<img class="frogaIMGWood" src="img/wood0t.png" width="36" height="27" border="0" id="woodT1" alt="td7d" cellid="td7d" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/water2t.png" id="td7e"></td>
 					<td class="frogaTD" width="10%" background="img/water0t.png" id="td7f"></td>
 					<td class="frogaTD" width="10%" background="img/water0t.png" id="td7g"></td>
 					<td class="frogaTD" width="10%" background="img/water0t.png" id="td7h">
-						<img class="frogaIMGWood" src="img/wood0t.png"  width="36" height="27" border="0" id="woodT2" alt="td7h" cellid="td7h"  />
+						<img class="frogaIMGWood" src="img/wood0t.png" width="36" height="27" border="0" id="woodT2" alt="td7h" cellid="td7h" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/water3t.png" id="td7i">
-						<img class="frogaIMGWood" src="img/wood0t.png"  width="36" height="27" border="0" id="woodT3" alt="td7i" cellid="td7i"  />
+						<img class="frogaIMGWood" src="img/wood0t.png" width="36" height="27" border="0" id="woodT3" alt="td7i" cellid="td7i" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/water0t.png" id="td7j"></td>
 				</tr>
 				<tr id="tr6" class="frogaTR">
 					<td class="frogaTD" width="10%" background="img/water0b.png" id="td6a"></td>
 					<td class="frogaTD" width="10%" background="img/water0b.png" id="td6b">
-						<img class="frogaIMGWood" src="img/wood0b.png" width="36" height="27" border="0" id="woodB0" alt="td6b" cellid="td6b"  />
+						<img class="frogaIMGWood" src="img/wood0b.png" width="36" height="27" border="0" id="woodB0" alt="td6b" cellid="td6b" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/water0b.png" id="td6c">
 						<img class="frogaIMGWood" src="img/wood0b.png" width="36" height="27" border="0" id="woodB1" alt="td6c" cellid="td6c" />
@@ -80,15 +80,13 @@
 						<img class="frogaIMGWood" src="img/wood0b.png" width="36" height="27" border="0" id="woodB2" alt="td6g" cellid="td6g" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/water0b.png" id="td6h">
-						<img class="frogaIMGWood" src="img/wood0b.png" width="36" height="27" border="0" id="woodB3" alt="td6h" cellid="td6h"  />
+						<img class="frogaIMGWood" src="img/wood0b.png" width="36" height="27" border="0" id="woodB3" alt="td6h" cellid="td6h" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/water0b.png" id="td6i"></td>
 					<td class="frogaTD" width="10%" background="img/water0b.png" id="td6j"></td>
 				</tr>
 				<tr id="tr5" class="frogaTR">
-					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5a">
-						<img src="img/arrow_left.png" border="0" id="aLeft" onclick="frogMove('left')" />
-					</td>
+					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5a"></td>
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5b"></td>
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5c"></td>
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5d"></td>
@@ -97,9 +95,7 @@
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5g"></td>
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5h"></td>
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5i"></td>
-					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5j">
-						<img src="img/arrow_right.png" border="0" id="aRight" onclick="frogMove('right')" />
-					</td>
+					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5j"></td>
 				</tr>
 				<tr id="tr4" class="frogaTR">
 					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4a"></td>
@@ -147,7 +143,7 @@
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2g"></td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2h"></td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2i">
-						<img src="img/car1.png" border="0" id="car12"  alt="td2i" cellid="td2i" />
+						<img src="img/car1.png" border="0" id="car12" alt="td2i" cellid="td2i" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2j"></td>
 				</tr>
@@ -180,16 +176,30 @@
 						<img id="frog1" class="frogaIMG" src="img/froga.png" alt="td0e" border="0" idwood="" cellid="td0e" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0f">
-						<img id="aLeft" src="img/arrow_down.png" border="0" onclick="frogMove('down')" />
+						<img id="frog2" class="frogaIMG" src="img/froga.png" alt="td0f" border="0" idwood="" cellid="td0f" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0g">
-						<img id="frog2" class="frogaIMG" src="img/froga.png" alt="td0g" border="0" idwood="" cellid="td0g" />
+						<img id="frog3" class="frogaIMG" src="img/froga.png" alt="td0g" border="0" idwood="" cellid="td0g" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0h"></td>
 					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0i"></td>
 					<td class="frogaTD" width="10%" background="img/meadow3b.png" id="td0j"></td>
 				</tr>
 			</table>
+			<div class="footerDiv">
+				<img src="img/arrow_up.png" border="0" id="aUp" onclick="frogMove('up')" />
+			</div>
+			<div class="footerDiv">
+				<span style="min-height: 27pt; min-width: 36pt; width:50%; vertical-align:middle; text-align: left" align="left" valign="middle">
+					<img src="img/arrow_left.png" border="0" id="aLeft" onclick="frogMove('left')" />
+				</span>
+				<span style="min-height: 27pt; min-width: 36pt; width:50%; vertical-align:middle; text-align: right" align="right" valign="middle">
+					<img src="img/arrow_right.png" border="0" id="aRight" onclick="frogMove('right')" />
+				</span>
+			</div>
+			<div class="footerDiv">
+				<img id="aDown" src="img/arrow_down.png" border="0" onclick="frogMove('down')" />
+			</div>
 		</div>
 	</body>
 </html>
