--- a/frogweb/froga.html
+++ b/frogweb/froga.html
@@ -2,14 +2,25 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Frog.Web</title>
-		<link rel="stylesheet" href="css/frog.css" />
+		<link rel="stylesheet" href="css/froga.css" />
 		<script type="text/javascript" src="js/froga.js"></script>
 	</head>
 
 	<body onload="frogInit()">
 		<div class="frogaDIV" align="center">
 			<div class="frogaDIVHeader">
-				<img class="frogaIMGHeader" src="img/header.png" id="headerImg" border="0" onclick="restart()" />
+				<span id="headerLeft" style="min-height: 36pt; min-width: 60pt; vertical-align: middle; font-size: larger; text-align: right " align="right" valign="middle">
+					<span id="frogsInWhole" alt="frogs in whole" style="color:greenyellow">0</span> 
+					<span id="frogsLeft" alt="frogs left" style="color:aqua;">4</span>					
+					<span id="frogsDied" alt="frogs died" style="color:gainsboro">0</span>
+				</span>
+				<span style="min-height: 36pt; min-width: 240pt; vertical-align:middle; font-size: medium; text-align: center" align="center" valign="middle">
+					<img class="frogaIMGHeader" src="img/header.png" id="headerImg" border="0" onclick="restart()" />
+				</span>
+				<span id="headerRight" style="min-height: 36pt; min-width: 60pt; vertical-align: middle; font-size: larger; text-align: left" align="left" valign="middle">
+					&nbsp;<span id="frogsLeft" alt="frogs left" style="color:orangered;">Level</span> 
+					<span id="frogsInWhole" alt="frogs in whole" style="color: greenyellow">0</span>
+				</span>				
 			</div>
 			<table class="frogaTBL" border="0" cellpadding="0" cellpadding="0">
 				<tr id="tr9" class="frogaTR">
