--- a/frogweb/froga/index.html
+++ b/frogweb/froga/index.html
@@ -19,7 +19,7 @@
 				</span>
 				<span id="headerRight" style="min-height: 36pt; min-width: 60pt; vertical-align: middle; font-size: larger; text-align: left" align="left" valign="middle">
 					&nbsp;<span id="frogsLeft" alt="frogs left" style="color:orangered;">Level</span> 
-					<span id="frogsInWhole" alt="frogs in whole" style="color: greenyellow">0</span>
+					<span id="frogaLevel" alt="froga level" style="color: greenyellow">0</span>
 				</span>				
 			</div>
 			<table class="frogaTBL" border="0" cellpadding="0" cellpadding="0">
