--- a/frogweb/froga/index.html
+++ b/frogweb/froga/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Frog.Web</title>
-		<link rel="stylesheet" href="css/froga.css" />
-		<script type="text/javascript" src="js/froga.js"></script>
+		<link rel="stylesheet" href="css/frog.css" />
+		<script type="text/javascript" src="js/frog.js"></script>
 	</head>
 
 	<body onload="frogInit()">
