--- a/frogweb/froga/FrogA.html
+++ b/frogweb/froga/FrogA.html
@@ -26,28 +26,26 @@
 			</span>
 		</div>
 		<table class="frogaTable" border="0" cellpadding="0" cellpadding="0">
-			<tr id="tr9" class="frogaTr">
-				<td id="td9a" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
-				<td id="td9b" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
-				<td id="td9c" class="frogaTd" width="8%" background="img/frogend0t.png">
-					<img id="whole0" cellid="td9c" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
-				</td>
-				<td id="td9d" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
-				<td id="td9e" class="frogaTd" width="8%" background="img/frogend0t.png">
-					<img id="whole1" cellid="td9e" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
-				</td>
-				<td id="td9f" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
-				<td id="td9g" class="frogaTd" width="8%" background="img/frogend0t.png">
-					<img id="whole2" cellid="td9g" class="frogaImageWhole" src="img/frogend0t.png" border="0" / >
-				</td>
-				<td id="td9h" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
-				<td id="td9i" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
-				<td id="td9j" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
-			</tr>
 			<tr id="tr8" class="frogaTr">
-				<td class="frogaTd" width="8%" background="img/meadow0t.png" id="td8a">
-					<!-- img src="img/meadow0t.png" botder="0" -->
+				<td id="td8a" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
+				<td id="td8b" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
+				<td id="td8c" class="frogaTd" width="8%" background="img/frogend0t.png">
+					<img id="whole0" cellid="td8c" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
 				</td>
+				<td id="td8d" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
+				<td id="td8e" class="frogaTd" width="8%" background="img/frogend0t.png">
+					<img id="whole1" cellid="td8e" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
+				</td>
+				<td id="td8f" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
+				<td id="td8g" class="frogaTd" width="8%" background="img/frogend0t.png">
+					<img id="whole2" cellid="td8g" class="frogaImageWhole" src="img/frogend0t.png" border="0" / >
+				</td>
+				<td id="td8h" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
+				<td id="td8i" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
+				<td id="td8j" class="frogaTd" width="8%" background="img/swamp0t.png"></td>
+			</tr>
+			<!-- tr id="tr8" class="frogaTr">
+				<td class="frogaTd" width="8%" background="img/meadow0t.png" id="td8a"></td>
 				<td id="td8b" class="frogaTd" width="8%" background="img/meadow0t.png">
 					<img id="meadow0t0" cellid="td8b" class="frogaImage" src="img/meadow0t.png" border="0" />
 				</td>
@@ -59,7 +57,7 @@
 				<td id="td8h" class="frogaTd" width="8%" background="img/meadow0t.png"></td>
 				<td id="td8i" class="frogaTd" width="8%" background="img/meadow0t.png"></td>
 				<td id="td8j" class="frogaTd" width="8%" background="img/meadow0t.png"></td>
-			</tr>
+			</tr-->
 			<tr id="tr7" class="frogaTr">
 				<td id="td7a" class="frogaTd" width="8%" background="img/water0t.png"></td>
 				<td id="td7b" class="frogaTd" width="8%" background="img/water0t.png"></td>
@@ -100,7 +98,7 @@
 				<td id="td6i" class="frogaTd" width="8%" background="img/water0b.png"></td>
 				<td id="td6j" class="frogaTd" width="8%" background="img/water0b.png"></td>
 			</tr>
-			<tr id="tr5" class="frogaTr">
+			<!-- tr id="tr5" class="frogaTr">
 				<td id="td5a" class="frogaTd" width="8%" background="img/meadow0t.png">
 					<img id="meadow0t1" cellid="td5a" class="frogaImage" src="img/meadow0t.png" border="0" />
 				</td>
@@ -113,96 +111,98 @@
 				<td id="td5h" class="frogaTd" width="8%" background="img/meadow0t.png"></td>
 				<td id="td5i" class="frogaTd" width="8%" background="img/meadow0t.png"></td>
 				<td id="td5j" class="frogaTd" width="8%" background="img/meadow0t.png"></td>
+			</tr -->
+			<tr id="tr5" class="frogaTr">
+				<td id="td5a" class="frogaTd" width="8%" background="img/walk1m.png"></td>
+				<td id="td5b" class="frogaTd" width="8%" background="img/walk1m.png">
+					<img id="person0" cellid="td5b" class="frogaImage" src="img/walk4m.png" border="0" />
+				</td>
+				<td id="td5c" class="frogaTd" width="8%" background="img/walk1m.png"></td>
+				<td id="td5d" class="frogaTd" width="8%" background="img/walk1m.png">
+					<img id="person1" cellid="td5d" class="frogaImage" src="img/walk5m.png" border="0" />
+				</td>
+				<td id="td5e" class="frogaTd" width="8%" background="img/walk1m.png"></td>
+				<td id="td5f" class="frogaTd" width="8%" background="img/walk1m.png"></td>
+				<td id="td5g" class="frogaTd" width="8%" background="img/walk1m.png">
+					<img id="person2" cellid="td5g" class="frogaImage" src="img/walk6m.png" border="0" />
+				</td>
+				<td id="td5h" class="frogaTd" width="8%" background="img/walk1m.png"></td>
+				<td id="td5i" class="frogaTd" width="8%" background="img/walk1m.png"></td>
+				<td id="td5j" class="frogaTd" width="8%" background="img/walk1m.png">
+					<img id="person3" cellid="td5j" class="frogaImage" src="img/walk3m.png" border="0" />
+				</td>
 			</tr>
 			<tr id="tr4" class="frogaTr">
-				<td id="td4a" class="frogaTd" width="8%" background="img/walk1m.png"></td>
-				<td id="td4b" class="frogaTd" width="8%" background="img/walk1m.png">
-					<img id="person0" cellid="td4b" class="frogaImage" src="img/walk4m.png" border="0" />
+				<td id="td4a" class="frogaTd" width="8%" background="img/meadow0m.png">
+					<img id="meadow0m0" cellid="td4a" class="frogaImage" src="img/meadow0m.png" border="0" />
 				</td>
-				<td id="td4c" class="frogaTd" width="8%" background="img/walk1m.png"></td>
-				<td id="td4d" class="frogaTd" width="8%" background="img/walk1m.png">
-					<img id="person1" cellid="td4d" class="frogaImage" src="img/walk5m.png" border="0" />
-				</td>
-				<td id="td4e" class="frogaTd" width="8%" background="img/walk1m.png"></td>
-				<td id="td4f" class="frogaTd" width="8%" background="img/walk1m.png"></td>
-				<td id="td4g" class="frogaTd" width="8%" background="img/walk1m.png">
-					<img id="person2" cellid="td4g" class="frogaImage" src="img/walk6m.png" border="0" />
-				</td>
-				<td class="frogaTd" width="8%" background="img/walk1m.png" id="td4h"></td>
-				<td class="frogaTd" width="8%" background="img/walk1m.png" id="td4i"></td>
-				<td class="frogaTd" width="8%" background="img/walk1m.png" id="td4j">
-					<img id="person3" cellid="td4j" class="frogaImage" src="img/walk3m.png" border="0" />
-				</td>
+				<td id="td4b" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
+				<td id="td4c" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
+				<td id="td4d" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
+				<td id="td4e" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
+				<td id="td4f" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
+				<td id="td4g" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
+				<td id="td4h" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
+				<td id="td4i" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
+				<td id="td4j" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
 			</tr>
 			<tr id="tr3" class="frogaTr">
-				<td id="td3a" class="frogaTd" width="8%" background="img/meadow0m.png">
-					<img id="meadow0m0" cellid="td3a" class="frogaImage" src="img/meadow0m.png" border="0" />
+				<td id="td3a" class="frogaTd" width="8%" background="img/street1t.png">
+					<img id="car30" cellid="td3a" class="frogaImage" src="img/car1.png" border="0" />
 				</td>
-				<td id="td3b" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
-				<td id="td3c" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
-				<td id="td3d" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
-				<td id="td3e" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
-				<td id="td3f" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
-				<td id="td3g" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
-				<td id="td3h" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
-				<td id="td3i" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
-				<td id="td3j" class="frogaTd" width="8%" background="img/meadow0m.png"></td>
+				<td id="td3b" class="frogaTd" width="8%" background="img/street1t.png"></td>
+				<td id="td3c" class="frogaTd" width="8%" background="img/street1t.png"></td>
+				<td id="td3d" class="frogaTd" width="8%" background="img/street1t.png"></td>
+				<td id="td3e" class="frogaTd" width="8%" background="img/street1t.png">
+					<img id="car31" cellid="td3e" class="frogaImage" src="img/car1.png" border="0" />
+				</td>
+				<td id="td3f" class="frogaTd" width="8%" background="img/street1t.png"></td>
+				<td id="td3g" class="frogaTd" width="8%" background="img/street1t.png"></td>
+				<td id="td3h" class="frogaTd" width="8%" background="img/street1t.png"></td>
+				<td id="td3i" class="frogaTd" width="8%" background="img/street1t.png">
+					<img id="car32" cellid="td3i" class="frogaImage" src="img/car1.png" border="0" />
+				</td>
+				<td id="td3j" class="frogaTd" width="8%" background="img/street1t.png"></td>
 			</tr>
 			<tr id="tr2" class="frogaTr">
-				<td id="td2a" class="frogaTd" width="8%" background="img/street1t.png">
-					<img id="car10" cellid="td2a" class="frogaImage" src="img/car1.png" border="0" />
+				<td id="td2a" class="frogaTd" width="8%" background="img/street1b.png"></td>
+				<td id="td2b" class="frogaTd" width="8%" background="img/street1b.png">
+					<img id="car20" cellid="td2b" class="frogaImage" src="img/car0.png" border="0" />
 				</td>
-				<td id="td2b" class="frogaTd" width="8%" background="img/street1t.png"></td>
-				<td id="td2c" class="frogaTd" width="8%" background="img/street1t.png"></td>
-				<td id="td2d" class="frogaTd" width="8%" background="img/street1t.png"></td>
-				<td id="td2e" class="frogaTd" width="8%" background="img/street1t.png">
-					<img id="car11" cellid="td2e" class="frogaImage" src="img/car1.png" border="0" />
+				<td id="td2c" class="frogaTd" width="8%" background="img/street1b.png"></td>
+				<td id="td2d" class="frogaTd" width="8%" background="img/street1b.png"></td>
+				<td id="td2e" class="frogaTd" width="8%" background="img/street1b.png"></td>
+				<td id="td2f" class="frogaTd" width="8%" background="img/street1b.png"></td>
+				<td id="td2g" class="frogaTd" width="8%" background="img/street1b.png"></td>
+				<td id="td2h" class="frogaTd" width="8%" background="img/street1b.png">
+					<img id="car21" cellid="td2h" class="frogaImage" src="img/car0.png" border="0" />
 				</td>
-				<td id="td2f" class="frogaTd" width="8%" background="img/street1t.png"></td>
-				<td id="td2g" class="frogaTd" width="8%" background="img/street1t.png"></td>
-				<td id="td2h" class="frogaTd" width="8%" background="img/street1t.png"></td>
-				<td id="td2i" class="frogaTd" width="8%" background="img/street1t.png">
-					<img id="car12" cellid="td2i" class="frogaImage" src="img/car1.png" border="0" />
-				</td>
-				<td id="td2j" class="frogaTd" width="8%" background="img/street1t.png"></td>
+				<td id="td2i" class="frogaTd" width="8%" background="img/street1b.png"></td>
+				<td id="td2j" class="frogaTd" width="8%" background="img/street1b.png"></td>
 			</tr>
 			<tr id="tr1" class="frogaTr">
-				<td id="td1a" class="frogaTd" width="8%" background="img/street1b.png"></td>
-				<td id="td1b" class="frogaTd" width="8%" background="img/street1b.png">
-					<img id="car00" cellid="td1b" class="frogaImage" src="img/car0.png" border="0" />
+				<td id="td1a" class="frogaTd" width="8%" background="img/meadow0b.png">
+					<img id="meadow0b0" cellid="td1a" class="frogaImage" src="img/meadow0b.png" border="0" />
 				</td>
-				<td id="td1c" class="frogaTd" width="8%" background="img/street1b.png"></td>
-				<td id="td1d" class="frogaTd" width="8%" background="img/street1b.png"></td>
-				<td id="td1e" class="frogaTd" width="8%" background="img/street1b.png"></td>
-				<td id="td1f" class="frogaTd" width="8%" background="img/street1b.png"></td>
-				<td id="td1g" class="frogaTd" width="8%" background="img/street1b.png"></td>
-				<td id="td1h" class="frogaTd" width="8%" background="img/street1b.png">
-					<img id="car01" cellid="td1h" class="frogaImage" src="img/car0.png" border="0" />
+				<td id="td1b" class="frogaTd" width="8%" background="img/meadow1b.png"></td>
+				<td id="td1c" class="frogaTd" width="8%" background="img/meadow1b.png"></td>
+				<td id="td1d" class="frogaTd" width="8%" background="img/meadow1b.png">
+					<img id="frog0" cellid="td1d" idwood="" class="frogaImage" src="img/frogactive.png" title="ActiveFrog" border="0" />
 				</td>
-				<td id="td1i" class="frogaTd" width="8%" background="img/street1b.png"></td>
-				<td id="td1j" class="frogaTd" width="8%" background="img/street1b.png"></td>
-			</tr>
-			<tr id="tr0" class="frogaTr">
-				<td id="td0a" class="frogaTd" width="8%" background="img/meadow0b.png">
-					<img id="meadow0b0" cellid="td0a" class="frogaImage" src="img/meadow0b.png" border="0" />
+				<td id="td1e" class="frogaTd" width="8%" background="img/meadow1b.png">
+					<img id="frog1" cellid="td1e" idwood="" class="frogaImage" src="img/frogpassive.png" border="0" />
 				</td>
-				<td id="td0b" class="frogaTd" width="8%" background="img/meadow1b.png"></td>
-				<td id="td0c" class="frogaTd" width="8%" background="img/meadow1b.png"></td>
-				<td id="td0d" class="frogaTd" width="8%" background="img/meadow1b.png">
-					<img id="frog0" cellid="td0d" idwood="" class="frogaImage" src="img/frogactive.png" title="ActiveFrog" border="0" />
+				<td id="td1f" class="frogaTd" width="8%" background="img/meadow1b.png">
+					<img id="frog2" cellid="td1f" class="frogaImage" src="img/frogpassive.png" border="0" idwood="" />
 				</td>
-				<td id="td0e" class="frogaTd" width="8%" background="img/meadow1b.png">
-					<img id="frog1" cellid="td0e" idwood="" class="frogaImage" src="img/frogpassive.png" border="0" />
+				<td id="td1g" class="frogaTd" width="8%" background="img/meadow1b.png">
+					<img id="frog3" cellid="td1g" idwood="" class="frogaImage" src="img/frogpassive.png" border="0" />
 				</td>
-				<td id="td0f" class="frogaTd" width="8%" background="img/meadow1b.png">
-					<img id="frog2" class="frogaImage" src="img/frogpassive.png" border="0" idwood="" cellid="td0f" />
+				<td id="td1h" class="frogaTd" width="8%" background="img/meadow1b.png"></td>
+				<td id="td1i" class="frogaTd" width="8%" background="img/meadow1b.png">
+					<img id="meadow0b0" cellid="td1i" class="frogaImage" src="img/meadow1b.png" border="0" />
 				</td>
-				<td id="td0g" class="frogaTd" width="8%" background="img/meadow1b.png">
-					<img id="frog3" cellid="td0g" idwood="" class="frogaImage" src="img/frogpassive.png" border="0" />
-				</td>
-				<td id="td0h" class="frogaTd" width="8%" background="img/meadow1b.png"></td>
-				<td id="td0i" class="frogaTd" width="8%" background="img/meadow1b.png"></td>
-				<td id="td0j" class="frogaTd" width="8%" background="img/meadow3b.png"></td>
+				<td id="td1j" class="frogaTd" width="8%" background="img/meadow3b.png"></td>
 			</tr>
 		</table>
 		<div class="frogaFooter">
