--- a/frogweb/froga/index.html
+++ b/frogweb/froga/index.html
@@ -3,7 +3,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Frog.Web</title>
 		<link rel="stylesheet" href="css/frog.css" />
-		<script type="text/javascript" src="js/frog.js"></script>
+		<script type="text/javascript" src="js/frogi.js"></script>
 	</head>
 
 	<body class="frogbody" onload="frogInit()">
