2023-11-13 https://area23.at/froga/
yet another layout fix

--- a/frogweb/froga/FrogA.html
+++ b/frogweb/froga/FrogA.html
@@ -59,44 +59,44 @@
 				<td id="td8j" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
 			</tr-->
 			<tr id="tr7" class="frogaTr">
-				<td id="td7a" class="frogaTd" width="8%" height="6%" background="img/water0t.png"></td>
-				<td id="td7b" class="frogaTd" width="8%" height="6%" background="img/water0t.png"></td>
-				<td id="td7c" class="frogaTd" width="8%" height="6%" background="img/water1t.png">
+				<td id="td7a" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
+				<td id="td7b" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
+				<td id="td7c" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed">
 					<img id="woodT0" cellid="td7c" class="frogaWood" src="img/wood0t.png" width="8%" height="6%" border="0" />
 				</td>
-				<td id="td7d" class="frogaTd" width="8%" height="6%" background="img/water0t.png">
+				<td id="td7d" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed">
 					<img id="woodT1" cellid="td7d" class="frogaWood" src="img/wood0t.png" width="8%" height="6%" border="0" />
 				</td>
-				<td id="td7e" class="frogaTd" width="8%" height="6%" background="img/water2t.png"></td>
-				<td id="td7f" class="frogaTd" width="8%" height="6%" background="img/water0t.png"></td>
-				<td id="td7g" class="frogaTd" width="8%" height="6%" background="img/water0t.png"></td>
-				<td id="td7h" class="frogaTd" width="8%" height="6%" background="img/water0t.png">
+				<td id="td7e" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
+				<td id="td7f" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
+				<td id="td7g" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
+				<td id="td7h" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed">
 					<img id="woodT2" cellid="td7h" class="frogaWood" src="img/wood0t.png" width="8%" height="6%" border="0" />
 				</td>
-				<td id="td7i" class="frogaTd" width="8%" height="6%" background="img/water3t.png">
+				<td id="td7i" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed">
 					<img id="woodT3" cellid="td7i" class="frogaWood" src="img/wood0t.png" width="36" height="6%" border="0" />
 				</td>
-				<td id="td7j" class="frogaTd" width="8%" height="6%" background="img/water0t.png"></td>
+				<td id="td7j" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
 			</tr>
 			<tr id="tr6" class="frogaTr">
-				<td id="td6a" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
-				<td id="td6b" class="frogaTd" width="8%" height="6%" background="img/water0b.png">
+				<td id="td6a" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
+				<td id="td6b" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed">
 					<img id="woodB0" cellid="td6b" class="frogaWood" src="img/wood0b.png" width="8%" height="6%" border="0" />
 				</td>
-				<td id="td6c" class="frogaTd" width="8%" height="6%" background="img/water0b.png">
+				<td id="td6c" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed">
 					<img id="woodB1" cellid="td6c" class="frogaWood" src="img/wood0b.png" width="8%" height="6%" border="0" />
 				</td>
-				<td id="td6d" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
-				<td id="td6e" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
-				<td id="td6f" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
-				<td id="td6g" class="frogaTd" width="8%" height="6%" background="img/water0b.png">
+				<td id="td6d" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
+				<td id="td6e" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
+				<td id="td6f" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
+				<td id="td6g" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed">
 					<img id="woodB2" cellid="td6g" class="frogaWood" src="img/wood0b.png" width="8%" height="6%" border="0" />
 				</td>
-				<td id="td6h" class="frogaTd" width="8%" height="6%" background="img/water0b.png">
+				<td id="td6h" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed">
 					<img id="woodB3" cellid="td6h" class="frogaWood" src="img/wood0b.png" width="8%" height="6%" border="0" />
 				</td>
-				<td id="td6i" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
-				<td id="td6j" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
+				<td id="td6i" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
+				<td id="td6j" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
 			</tr>
 			<!-- tr id="tr5" class="frogaTr">
 				<td id="td5a" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png">
@@ -133,52 +133,52 @@
 				</td>
 			</tr>
 			<tr id="tr4" class="frogaTr">
-				<td id="td4a" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png">
+				<td id="td4a" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;">
 					<img id="meadow0m0" cellid="td4a" class="frogaImage" src="img/meadow0m.png" border="0" />
 				</td>
-				<td id="td4b" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-				<td id="td4c" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-				<td id="td4d" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-				<td id="td4e" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-				<td id="td4f" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-				<td id="td4g" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-				<td id="td4h" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-				<td id="td4i" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-				<td id="td4j" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
+				<td id="td4b" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+				<td id="td4c" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+				<td id="td4d" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+				<td id="td4e" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+				<td id="td4f" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+				<td id="td4g" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+				<td id="td4h" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+				<td id="td4i" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+				<td id="td4j" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
 			</tr>
 			<tr id="tr3" class="frogaTr">
-				<td id="td3a" class="frogaTd" width="8%" height="6%" background="img/street1t.png">
+				<td id="td3a" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;">
 					<img id="car30" cellid="td3a" class="frogaImage" src="img/car1.png" border="0" />
 				</td>
-				<td id="td3b" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-				<td id="td3c" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-				<td id="td3d" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-				<td id="td3e" class="frogaTd" width="8%" height="6%" background="img/street1t.png">
+				<td id="td3b" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+				<td id="td3c" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+				<td id="td3d" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+				<td id="td3e" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;;">
 					<img id="car31" cellid="td3e" class="frogaImage" src="img/car1.png" border="0" />
 				</td>
-				<td id="td3f" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-				<td id="td3g" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-				<td id="td3h" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-				<td id="td3i" class="frogaTd" width="8%" height="6%" background="img/street1t.png">
+				<td id="td3f" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+				<td id="td3g" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+				<td id="td3h" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+				<td id="td3i" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;">
 					<img id="car32" cellid="td3i" class="frogaImage" src="img/car1.png" border="0" />
 				</td>
-				<td id="td3j" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
+				<td id="td3j" class="frogaTd" width="8%" height="6%"  style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
 			</tr>
 			<tr id="tr2" class="frogaTr">
-				<td id="td2a" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-				<td id="td2b" class="frogaTd" width="8%" height="6%" background="img/street1b.png">
+				<td id="td2a" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;"></td>
+				<td id="td2b" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;">
 					<img id="car20" cellid="td2b" class="frogaImage" src="img/car0.png" border="0" />
 				</td>
-				<td id="td2c" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-				<td id="td2d" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-				<td id="td2e" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-				<td id="td2f" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-				<td id="td2g" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-				<td id="td2h" class="frogaTd" width="8%" height="6%" background="img/street1b.png">
+				<td id="td2c" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px; "></td>
+				<td id="td2d" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px; "></td>
+				<td id="td2e" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px; "></td>
+				<td id="td2f" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px; "></td>
+				<td id="td2g" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px; "></td>
+				<td id="td2h" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px; ">
 					<img id="car21" cellid="td2h" class="frogaImage" src="img/car0.png" border="0" />
 				</td>
-				<td id="td2i" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-				<td id="td2j" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
+				<td id="td2i" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px; "></td>
+				<td id="td2j" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px; "></td>
 			</tr>
 			<tr id="tr1" class="frogaTr">
 				<td id="td1a" class="frogaTd" width="8%" height="6%" background="img/meadow0b.png">
