--- a/frogweb/froga/index.html
+++ b/frogweb/froga/index.html
@@ -62,72 +62,72 @@
 					<td id="td8j" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				</tr>
 				<!-- tr id="tr8" class="frogaTr">
-					<td id="td8a" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png">
+					<td id="td8a" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;">
 						<img id="meadow0t0" cellid="td8b" class="frogaImage" src="img/meadow0t.png" width="8%" height="6%" border="0" />
 					</td>
-					<td id="td8b" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td8c" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td8d" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td8e" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td8f" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td8g" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td8h" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td8i" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td8j" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
+					<td id="td8b" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td8c" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td8d" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td8e" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td8f" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td8g" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td8h" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td8i" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td8j" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
 				</tr -->
 				<tr id="tr7" class="frogaTr">
-					<td id="td7a" class="frogaTd" width="8%" height="6%" background="img/water0t.png"></td>
-					<td id="td7b" class="frogaTd" width="8%" height="6%" background="img/water0t.png"></td>
-					<td id="td7c" class="frogaTd" width="8%" height="6%" background="img/water1t.png">
+					<td id="td7a" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
+					<td id="td7b" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
+					<td id="td7c" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed">
 						<img id="woodT0" cellid="td7c" class="frogaWood" src="img/wood0t.png" width="8%" height="6%" border="0" />
 					</td>
-					<td id="td7d" class="frogaTd" width="8%" height="6%" background="img/water0t.png">
+					<td id="td7d" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed">
 						<img id="woodT1" cellid="td7d" class="frogaWood" src="img/wood0t.png" width="8%" height="6%" border="0" />
 					</td>
-					<td id="td7e" class="frogaTd" width="8%" height="6%" background="img/water2t.png"></td>
-					<td id="td7f" class="frogaTd" width="8%" height="6%" background="img/water0t.png"></td>
-					<td id="td7g" class="frogaTd" width="8%" height="6%" background="img/water0t.png"></td>
-					<td id="td7h" class="frogaTd" width="8%" height="6%" background="img/water0t.png">
+					<td id="td7e" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
+					<td id="td7f" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
+					<td id="td7g" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
+					<td id="td7h" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed">
 						<img id="woodT2" cellid="td7h" class="frogaWood" src="img/wood0t.png" width="8%" height="6%" border="0" />
 					</td>
-					<td id="td7i" class="frogaTd" width="8%" height="6%" background="img/water3t.png">
+					<td id="td7i" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed">
 						<img id="woodT3" cellid="td7i" class="frogaWood" src="img/wood0t.png" width="36" height="6%" border="0" />
 					</td>
-					<td id="td7j" class="frogaTd" width="8%" height="6%" background="img/water0t.png"></td>
+					<td id="td7j" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
 				</tr>
 				<tr id="tr6" class="frogaTr">
-					<td id="td6a" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
-					<td id="td6b" class="frogaTd" width="8%" height="6%" background="img/water0b.png">
+					<td id="td6a" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
+					<td id="td6b" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed">
 						<img id="woodB0" cellid="td6b" class="frogaWood" src="img/wood0b.png" width="8%" height="6%" border="0" />
 					</td>
-					<td id="td6c" class="frogaTd" width="8%" height="6%" background="img/water0b.png">
+					<td id="td6c" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed">
 						<img id="woodB1" cellid="td6c" class="frogaWood" src="img/wood0b.png" width="8%" height="6%" border="0" />
 					</td>
-					<td id="td6d" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
-					<td id="td6e" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
-					<td id="td6f" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
-					<td id="td6g" class="frogaTd" width="8%" height="6%" background="img/water0b.png">
+					<td id="td6d" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
+					<td id="td6e" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
+					<td id="td6f" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
+					<td id="td6g" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed">
 						<img id="woodB2" cellid="td6g" class="frogaWood" src="img/wood0b.png" width="8%" height="6%" border="0" />
 					</td>
-					<td id="td6h" class="frogaTd" width="8%" height="6%" background="img/water0b.png">
+					<td id="td6h" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed">
 						<img id="woodB3" cellid="td6h" class="frogaWood" src="img/wood0b.png" width="8%" height="6%" border="0" />
 					</td>
-					<td id="td6i" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
-					<td id="td6j" class="frogaTd" width="8%" height="6%" background="img/water0b.png"></td>
+					<td id="td6i" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
+					<td id="td6j" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
 				</tr>
 				<tr id="tr5" class="frogaTr">
-					<td id="td5a" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png">
+					<td id="td5a" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;">
 						<img id="meadow0t1" cellid="td5a" class="frogaImage" src="img/meadow0t.png" width="8%" height="6%" border="0" />
 					</td>
-					<td id="td5b" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td5c" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td5d" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td5e" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td5f" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td5g" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td5h" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td5i" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-					<td id="td5j" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
+					<td id="td5b" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td5c" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td5d" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td5e" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td5f" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td5g" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td5h" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td5i" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td5j" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
 				</tr>
 				<tr id="tr4" class="frogaTr">
 					<td id="td4a" class="frogaTd" width="8%" height="6%" background="img/walk1m.png"></td>
@@ -150,52 +150,52 @@
 					</td>
 				</tr>
 				<tr id="tr3" class="frogaTr">
-					<td id="td3a" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png">
+					<td id="td3a" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;">
 						<img id="meadow0m0" cellid="td3a" class="frogaImage" src="img/meadow0m.png" width="8%" height="6%" border="0" />
 					</td>
-					<td id="td3b" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-					<td id="td3c" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-					<td id="td3d" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-					<td id="td3e" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-					<td id="td3f" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-					<td id="td3g" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-					<td id="td3h" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-					<td id="td3i" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
-					<td id="td3j" class="frogaTd" width="8%" height="6%" background="img/meadow0m.png"></td>
+					<td id="td3b" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td3c" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td3d" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td3e" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td3f" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td3g" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td3h" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td3i" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
+					<td id="td3j" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
 				</tr>
 				<tr id="tr2" class="frogaTr">
-					<td id="td2a" class="frogaTd" width="8%" height="6%" background="img/street1t.png">
+					<td id="td2a" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;">
 						<img id="car10" cellid="td2a" class="frogaImage" src="img/car1.png" border="0" />
 					</td>
-					<td id="td2b" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-					<td id="td2c" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-					<td id="td2d" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-					<td id="td2e" class="frogaTd" width="8%" height="6%" background="img/street1t.png">
+					<td id="td2b" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+					<td id="td2c" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+					<td id="td2d" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+					<td id="td2e" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;">
 						<img id="car11" cellid="td2e" class="frogaImage" src="img/car1.png" border="0" />
 					</td>
-					<td id="td2f" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-					<td id="td2g" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-					<td id="td2h" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
-					<td id="td2i" class="frogaTd" width="8%" height="6%" background="img/street1t.png">
+					<td id="td2f" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+					<td id="td2g" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+					<td id="td2h" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
+					<td id="td2i" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;">
 						<img id="car12" cellid="td2i" class="frogaImage" src="img/car1.png" border="0" />
 					</td>
-					<td id="td2j" class="frogaTd" width="8%" height="6%" background="img/street1t.png"></td>
+					<td id="td2j" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-bottom: dashed; border-bottom-color: black; border-bottom-width: 1px;"></td>
 				</tr>
 				<tr id="tr1" class="frogaTr">
-					<td id="td1a" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-					<td id="td1b" class="frogaTd" width="8%" height="6%" background="img/street1b.png">
+					<td id="td1a" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;"></td>
+					<td id="td1b" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;">
 						<img id="car00" cellid="td1b" class="frogaImage" src="img/car0.png" border="0" />
 					</td>
-					<td id="td1c" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-					<td id="td1d" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-					<td id="td1e" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-					<td id="td1f" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-					<td id="td1g" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-					<td id="td1h" class="frogaTd" width="8%" height="6%" background="img/street1b.png">
+					<td id="td1c" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;"></td>
+					<td id="td1d" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;"></td>
+					<td id="td1e" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;"></td>
+					<td id="td1f" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;"></td>
+					<td id="td1g" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;"></td>
+					<td id="td1h" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;">
 						<img id="car01" cellid="td1h" class="frogaImage" src="img/car0.png" border="0" />
 					</td>
-					<td id="td1i" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
-					<td id="td1j" class="frogaTd" width="8%" height="6%" background="img/street1b.png"></td>
+					<td id="td1i" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;"></td>
+					<td id="td1j" class="frogaTd" width="8%" height="6%" style="background-image: none; background-color: #eed3d3; border-top: dashed; border-top-color: black; border-top-width: 1px;"></td>
 				</tr>
 				<tr id="tr0" class="frogaTr">
 					<td id="td0a" class="frogaTd" width="8%" height="6%" background="img/meadow0b.png">
